--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,5 @@
 PORT=3002
 
-PRODUCTS_MICROSERVICE_HOST=localhost
-PRODUCTS_MICROSERVICE_PORT=3001
-
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
@@ -11,3 +8,7 @@ PRODUCTS_MICROSERVICE_PORT=3001
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+
+
+
+NATS_SERVERS="nats://localhost:4222"
